# comfyui2openai

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh
comfyui_api_workflows/: 图生图.json  图生图极速版.json  图生视频.json  文生图.json  文生图极速版.json  文生视频.json
runs/99b795b1310b4e03b7571649d5c43ef8/: prompt.json
src/: __main__.py  app.py  comfy_client.py  config.py  jobs.py  signed_urls.py  util.py  workflow_params.py  workflow_registry.py
