[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui2openai"
version = "0.1.0"
description = "OpenAI-compatible API wrapper for ComfyUI (workflows hot-reload + queue + progress via ComfyUI websocket)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "websockets>=12.0",
  "watchfiles>=0.21",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
